--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,8 @@ li a {
 /* Use flexbox to push images right down to the bottom of each div */
 .products {
     border: 1px solid black;
-    max-width: 300px;
+    width: 222px;
+    justify-content: space-between;
     border-radius: 10px;
 }
 
@@ -246,7 +247,8 @@ li a {
 }
 
 .shop-img {
-    width: 100%;
+    width: 222px;
+    height: 222px;
     margin-top: 10px;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0px -2px 6px black;
